--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": " gulp --require babel-register --gulpfile tasks",
-    "build": "SET NODE_ENV=production gulp build --require babel-register --gulpfile tasks"
+    "build": "gulp build --require babel-register --gulpfile tasks"
   },
   "babel": {
     "presets": [
