--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
   },
   "homepage": "https://github.com/AlexsaniKY/UnicodeRPG#readme",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "babel-loader": "^8.0.5",
     "browser-sync": "^2.26.3",
     "gulp": "^4.0.0",
     "webpack": "^4.28.4",
