--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 
         "outDir": "./dist",
         "allowJs": true,
-        "target": "es5"
+        "target": "es6" //!!
     },
     "include": [
         "./src/**/*"
