simplified game init, created better integration of Tile/Tileset/TextSprite

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "src/main.ts"
     ],
     "compilerOptions": {
+        "moduleResolution":"node",
         //"module": "none",
         //"noImplicitAny": true,
         "removeComments": true,
